--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,18 +3,25 @@
 {% block title %}SAE 401{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<header>
+    <h1>SAE 401</h1>
+    <nav>
+        <a href="{{ path('app_compte')}}" class="btn btn-primary">Compte</a>
+        <a href="{{ path('app_login')}}" class="btn btn-primary">Compte</a>
+    </nav>
+</header>
+<main>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<h1>
+    {% if app.user %}
+        Bonjour {{ app.user.username }}
+    {% else %}
+        Bonjour
+    {% endif %}
+</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/alexandre/Documents/www/sae401/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/alexandre/Documents/www/sae401/templates/index.html.twig'|file_link(0) }}">templates/index.html.twig</a></code></li>
-    </ul>
-</div>
+<h2>
+    <a href="{{ path('app_new_partie') }}">Créer une Partie</a>
+</h2>
+</main>
 {% endblock %}
